drrx/fixtures/positive/positive-sp03-first-child-ok.tree.drrx
.                         # root
+ -- dir/
  |+== a.txt               # first child under '+' has '|' aligned to parent content column
    :== b.txt
