drrx/fixtures/invalid/invalid-sp03-missing-first-child.tree.drrx
.                  # root
+-- dir/
  +== a.txt       # EXPECT: SP.03 (first child under '+', no '|'), and FW.02 because sibling follows
  :== b.txt
